mainvew header common

--- a/ui_lovelace_minimalist/custom_cards/cards/status_chips.yaml
+++ b/ui_lovelace_minimalist/custom_cards/cards/status_chips.yaml
@@ -68,17 +68,16 @@ status_chips:
                   template: chip_icon_state_if_value
                   variables:
                     optional: '[[[ return variables.area === "*"; ]]]'
-                area: '[[[ return variables.area; ]]]'
-              - label 1: '[[[ return variables.label; ]]]'
+                area: "[[[ return variables.area; ]]]"
+              - label 1: "[[[ return variables.label; ]]]"
                 label 2: Status
                 options:
                   type: custom:button-card
                   template: chip_icon_state_if_value
-              - label: '[[[ return variables.solo_label; ]]]'
+              - label: "[[[ return variables.solo_label; ]]]"
                 options:
                   type: custom:button-card
                   template: chip_icon_state_if_value
-                
 
           sort:
             method: state
