--- a/ui_lovelace_minimalist/dashboard/views/mainviews/network.yaml
+++ b/ui_lovelace_minimalist/dashboard/views/mainviews/network.yaml
@@ -4,12 +4,14 @@ subview: true
 type: custom:grid-layout
 layout:
   grid-template-areas: |
+    ". header ."
     "network disconnected updates"
     "network wifi connected"
   mediaquery:
     # portrait monitor
     "only screen and (min-width: 769px) and (max-width: 1400px)":
       grid-template-areas: |
+        "header header"
         "network disconnected"
         "network updates"
         "network wifi"
@@ -18,12 +20,21 @@ layout:
     # Smartphones
     "only screen and (max-width: 768px)":
       grid-template-areas: |
+        "header"
         "network"
         "wifi"
         "disconnected"
         "updates"
         "connected"
 cards:
+  #################
+  # HEADER
+  #################
+  - type: custom:button-card
+    template: mainview_header
+    view_layout:
+      grid-area: header
+
   - type: vertical-stack
     view_layout:
       grid-area: network
