--- a/ui_lovelace_minimalist/custom_cards/layout/subview_header.yaml
+++ b/ui_lovelace_minimalist/custom_cards/layout/subview_header.yaml
@@ -1,6 +1,6 @@
 ---
 subview_header:
-  template: 
+  template:
     - responsive_variables
     - discovery_variables
     - grid_two_columns
@@ -11,7 +11,7 @@ subview_header:
 
   styles:
     custom_fields:
-      logo:
+      item1:
         - margin-bottom: '[[[ if (variables.is_mobile) return "20px" ]]]'
       
   custom_fields:
