--- a/automations/scenes/change_scene.yaml
+++ b/automations/scenes/change_scene.yaml
@@ -82,7 +82,8 @@ action:
           id: home
         sequence:
           - action: input_boolean.turn_off
-            entity_id: input_boolean.on_vacation
+            target:
+              entity_id: input_boolean.on_vacation
           - action: scene.turn_on
             target:
               entity_id: scene.home
