remove declutter card for button one

--- a/ui_lovelace_minimalist/custom_cards/layout/mainview_header.yaml
+++ b/ui_lovelace_minimalist/custom_cards/layout/mainview_header.yaml
@@ -20,5 +20,5 @@ mainview_header:
         template: status_chips
         variables:
           area: "[[[ return variables.area; ]]]"
-          label: "[[[ return variables.slug; ]]]"
+          label: "[[[ return variables.anchor; ]]]"
           solo_label: "[[[ return variables.solo_label; ]]]"
