--- a/ui_lovelace_minimalist/dashboard/views/rooms/master-bathroom.yaml
+++ b/ui_lovelace_minimalist/dashboard/views/rooms/master-bathroom.yaml
@@ -24,13 +24,12 @@ cards:
   #################
   # HEADER
   #################
-  - type: custom:decluttering-card
+  - type: custom:button-card
     template: room_header
     view_layout:
       grid-area: header
     variables:
-      - sensor_prefix: master_bath
-      - room_name: Master Bathroom
+      single_column: true
 
   #################
   # DEVICES
