--- a/automations/lab/seedbox_vpn_off.yaml
+++ b/automations/lab/seedbox_vpn_off.yaml
@@ -6,17 +6,18 @@ alias: Seedbox VPN off alert
 id: 4cf2336b-949f-4241-adf7-2da850ab74ac
 
 trigger:
-  platform: state
+  trigger: state
   entity_id: sensor.seedbox_vpn_on
   to: "False"
-  for: "00:01:00"
+  for:
+    minutes: 1
 
 action:
-  - service: notify.persistent_notification
+  - action: notify.persistent_notification
     data:
       message: "VPN is not running on the seedbox."
       title: "🔐 VPN Seedbox Alert!"
-  - service: notify.mobile_app_poat_s_iphone_14_pro_max
+  - action: notify.mobile_app_poat_s_iphone_14_pro_max
     data:
       message: "VPN is not running on the seedbox."
       title: "🔐 VPN Seedbox Alert!"
