--- a/automations/utilities/dishwasher_start.yaml
+++ b/automations/utilities/dishwasher_start.yaml
@@ -6,10 +6,11 @@ alias: Dishwasher start
 id: 7ed00e9c-edaf-42a0-b478-464142669ceb
 
 trigger:
-  platform: numeric_state
+  trigger: numeric_state
   entity_id: sensor.dishwasher_7_1min
   above: 5
-  for: '00:02:00'
+  for:
+    minutes: 2
 
 condition:
   condition: state
@@ -17,5 +18,5 @@ condition:
   state: 'off'
 
 action:
-- service: input_boolean.turn_on
+- action: input_boolean.turn_on
   entity_id: input_boolean.dishwasher_on
