--- a/automations/utilities/vacuum.yaml
+++ b/automations/utilities/vacuum.yaml
@@ -6,7 +6,7 @@ alias: Vacuum notifications
 id: 3d016231-82c4-4462-91c5-153bf38d9b57
 
 trigger:
-  platform: state
+  trigger: state
   entity_id:
     - vacuum.rolo
   from:
@@ -17,7 +17,7 @@ trigger:
   to: docked
 
 action:
-  service: notify.family_ai
+  action: notify.family_ai
   data:
     title: 🧹 Rolo is finished!
     message: false
